# hybrid_scraper

./: .gitignore  IO.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
color-labelled-data/: Copy of JD Spreadsheet.xlsx
combined_scraper/: CHANGELOG.md  IMPROVEMENTS.md  README.md  ai_extractor.py  ai_scorer.py  linkedin_finder.py  query_generator.py  run.py  url_harvester.py
combined_scraper/results/: HR_Candidates_Japan.docx  HR_Candidates_Japan_Round2.docx  generate_docx.py  hr_candidates_round2.csv  hr_candidates_round2.json  hybrid_results_20260216_020945.csv  hybrid_results_20260216_020945.json  hybrid_results_20260216_021325.csv  hybrid_results_20260216_021325.json  hybrid_results_20260216_022720.csv  hybrid_results_20260216_022720.json  hybrid_results_20260216_025107.csv  hybrid_results_20260216_025107.json
judge/: master_ledger.py  pretty.py  run_crocs_hr.py  seed_master_ledger.py  step1_parse_human_labels.py  step2_draft_rubric.py  step3_dspy_judge.py  step3b_baseline.py  step4_optimize.py  step4b_rederive.py  step5a_export_xlsx.py  step5a_predict_unflagged.py  step5c_judge_new_candidates.py  sync_sheets.py  web_app.py
judge/IO/master/: predictions.json  predictions.xlsx  untagged.json  untagged.xlsx
judge/IO/step1_parse/: human_labels.jsonl  human_labels.md  human_labels.pretty.json  human_labels.xlsx  human_labels_raw.csv
judge/IO/step2_rubric/: ambiguity_report.md  ambiguity_resolutions.md  colored_only.jsonl  (+4 more)
judge/Plans/: BACKLOG.md  DONE.md  FUTURE_CANDIDATES.md  GOOGLE_SHEETS_SETUP.md  PIPELINE.md  STREAMLIT_DEPLOY.md
(+46 files in other folders)
